# AI4Pain-2026

./: .gitignore  FRAMEWORK.html  MODELS_FRAMEWORK.html  README.md  pyproject.toml  requirements.txt
ai4pain/: __init__.py  baselines.py  cnn_1d.py  data.py  dual_ensemble.py  eda_decomp.py  hrv.py  metrics.py  minirocket.py  multi_stream.py  multiseed.py  portal_format.py  spectrogram.py  splits.py  submission.py  transformer.py
experiments/champion_eval/: manifest.json
experiments/iter_0001/: manifest.json
experiments/iter_0002/: manifest.json
experiments/iter_0003/: manifest.json
experiments/iter_0004/: manifest.json
experiments/iter_0005/: manifest.json
experiments/iter_0007/: manifest.json
experiments/iter_0008/: manifest.json
experiments/iter_0009/: manifest.json
experiments/iter_0011/: manifest.json
experiments/iter_0012/: manifest.json
experiments/iter_0013/: manifest.json
experiments/iter_0016/: manifest.json
feature-extraction-rust/: Cargo.toml
feature-extraction-rust/src/: lib.rs  main.rs  types.rs
feature-extraction-rust/tests/: integration_test.rs
framework/: __init__.py  breakdown.py  constraints.py  eval.py  fitness.py  introspect.py  iteration.py  ledger.py  loop.py  meta.py  mutation.py  population.py  render.py  seeds.py
scripts/: extract_features.sbatch  pull_from_cluster.sh  push_to_cluster.sh  run_array.slurm  run_experiment.slurm  run_submission.slurm  sync_data_to_cluster.sh  train_dl_cnn.sbatch  train_dl_models.py
src/: dl_data.py  dl_models.py  dl_training.py
tests/: conftest.py
(+320 files in other folders)
