[package]
name = "ai4pain_feature_extraction"
version = "0.1.0"
edition = "2021"
description = "Catch22 + entropy + statistical feature extraction for AI4Pain 2026 physiological signals (BVP, EDA, RESP, SpO2)"
authors = ["Vignan Kamarthi"]

# NOTE (Phase 0 scaffold):
# This Cargo.toml is a placeholder. The actual adaptation happens in Phase 1
# of the scaffolding plan and is gated by HIP-2 (fork vs path dependency).
# Source of truth: ../Blood-Pressure-Inference-with-BVP/Feature-Extraction-Rust-Complete/Cargo.toml
# See scripts/extract_features.sbatch for the expected invocation once Phase 1
# is complete.

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# Numerics
ndarray = "0.16"
statrs = "0.17"
nalgebra = "0.33"

# Parallelism
rayon = "1.10"
num_cpus = "1.16"

# I/O
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Progress + logging
indicatif = "0.17"
log = "0.4"
env_logger = "0.11"

# Error handling
anyhow = "1"

# Time
chrono = "0.4"

# FFT (for spectral features in catch22)
rustfft = "6.2"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
